Modificación de algunos endpoints de objetivos y resumen anual